\name{NEWS}

\title{News for Package \pkg{pedometrics}}

\section{Changes in version 0.2-3 (2014-10-07)}{
  \itemize{
    \item Corrected bugs in functions objPairs(), objPoints(), pairs_per_lag(),
    points_per_lag() and spJitter(). Added new criterion to objPairs() and
    objPoints(). Added new method to spJitter() (finite set of candidate
    locations). Most of the changes speed up the functions and increase
    their functionalities.
  }
}

\section{Changes in version 0.2-2 (2014-10-02)}{
  \itemize{
    \item Included functions objPairs(), objPoints(), pairs_per_lag() and 
    points_per_lag(). These functions were designed to be used with spatial
    simulated annealing.
  }
}

\section{Changes in version 0.2-1 (2014-09-30)}{
  \itemize{
    \item Included functions spJitter() and bbox2sp().
  }
}

\section{Changes in version 0.2-0 (2014-09-25)}{
  \itemize{
    \item Started the second season of the initial development of the package.
    Included functions plotHD() and plotESDA().
  }
}

\section{Changes in version 0.1-9 (2014-08-01)}{
  \itemize{
    \item Removed \code{toar()} and \code{readsat()} because they are better
          implemented using GRASS GIS commands directly.
  }
}

\section{Changes in version 0.1-8 (2014-07-03)}{
  \itemize{
    \item Second public release (R-Forge).
    \item Included function \code{buildMS()}, used to build a series of linear 
          models using automated variable selection. Included function
          \code{statsMS()}, used to obtain performance statistics of a series
          of linear models. Included function \code{plotMS}, used to plot the
          statistics of a models series. Corrected bugs detected during the
          first built.
  }
}

\section{Changes in version 0.1-7 (2014-06-16)}{
  \itemize{
    \item First public release (R-Forge).
    \item Several corrections in the documentation, preparing for the first public release.
  }
}

\section{Changes in version 0.1-6 (2014-05-25)}{
  \itemize{